--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-testing <a href="https://www.cerita-silat.net">cerita silat drama</a>
+
+<!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+
+    <title>Film Drama Cerita Silat</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../css/editor.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="narrow-jumbotron.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Wuxia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Proyek Wuxia</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1 class="display-3">Wuxia Drama</h1>
+        <p class="lead"><p class="lead" style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium; text-align: start;"><b>Disini adalah tempat membagi review drama atau adaptasi drama yang bertemakan cerita silat atau <b>Wuxia</b>. Semua ulasan berdasarkan profesional keahlian pribadi semata.</b><div><b><br></b></div><div><b>Semua orang boleh berbagi review personal untuk drama adaptasi apapun, syaratnya cuma satu yaitu tentang wuxia atau cerita silat. Yang karya nya di publish ke blog, akan mendapatkan bayaran (berapa besar tergantung kualitas artikel review drama nya)</b></div></p></p>
+        <p>Lanjut Baca di:<a class="btn btn-lg btn-success" href="https://www.cerita-silat.net" role="button">Wuxia Indonesia</a></p>
+      </div>
+<br>
+Beberapa Drama Wuxia terbaik serta film silat mandarin terbaik adalah:
+<br>
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Ip Man</h4>
+          <p><p style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">film ini sudah memiliki sekuel yang sangat banyak dan berurutan sampai seri ke-empat. Dibintangi oleh Donnie Yen sebagai ip man, salah satu guru Bruce Lee dan pencipta beladiri Wing Chun.</p></p>
+
+          <h4>Shaolin Soccer</h4>
+          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">film ini menggabungkan humor lawak dengan ilmu beladiri. Dibintangi oleh aktor komedi Stephen Chow. Pertandingan sepakbola yang tidak masuk akal membuat perut kita mules karena aksi lucunya.</span></p>
+
+          <h4>Pendekar Ulat Sutera</h4>
+          <p><div class="col-lg-6" style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;"><p>seorang pendekar yang tidak mengetahui siapa orang tuanya, diajarin ilmu tingkat tinggi dari perguruan paling top dunia persilatan yaitu Wudang (butong), ilmu itu dinamakan ilmu Ulat Sutera.</p></div></p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>Wong Fei-hung</h4>
+          <p><p style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Film ini sudah sangat sering disajikan kedalam berbagai versi. Yang paling terkenal adalah yang dibintangi aktor laga Jet Li dengan judul Once upon a time in China.</p></p>
+
+          <h4>the Return of the Condor Heroes</h4>
+          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Bercerita tentang seorang pendekar bernama Yoko (yang guo) dalam menentang aturan dunia persilatan dan membina hubungan asmara dengan guru ilmu silatnya. Petualangan Yoko dalam perjuangan menemukan jati diri di dunia persilatan membentu karakter ksatrianya yang sejati.</span></p>
+
+          <h4>The Book and the Sword</h4>
+          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Kisah aksi seorang pendekar cendekiawan bernama Chen Jialuo dalam memimpin kelompok bunga merah untuk perjuangan melawan pemerintahan dinasti Qing yang menguasai china daratan tengah. Kisah heroiknya dan asmaranya dengan perempuan suku Uygur menjadi tema utama cerita.</span></p>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>© Wuxia Indonesia 2021</p>
+      </footer>
+
+    </div> <!-- /container -->
+  
+
+</body>
+</html>
