--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@ Beberapa Drama Wuxia terbaik serta film silat mandarin terbaik adalah:
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>Ip Man</h4>
-          <p><p style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">film ini sudah memiliki sekuel yang sangat banyak dan berurutan sampai seri ke-empat. Dibintangi oleh Donnie Yen sebagai ip man, salah satu guru Bruce Lee dan pencipta beladiri Wing Chun.</p></p>
+          <p><p style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">film ini sudah memiliki sekuel yang sangat banyak dan berurutan sampai seri ke-empat. Dibintangi oleh Donnie Yen sebagai ip man, salah satu guru Bruce Lee dan pencipta beladiri Wing Chun. Ketenaran film ip man ini membuat beladiri Wing Chun didunia nyata digandrungi anak muda. Biarpun ip man 4: the final adalah seri terakhir, tetapi terdapat beberapa spin-off dari serial ini</p></p>
 
           <h4>Shaolin Soccer</h4>
-          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">film ini menggabungkan humor lawak dengan ilmu beladiri. Dibintangi oleh aktor komedi Stephen Chow. Pertandingan sepakbola yang tidak masuk akal membuat perut kita mules karena aksi lucunya.</span></p>
+          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">film ini menggabungkan humor lawak dengan ilmu beladiri. Dibintangi oleh aktor komedi Stephen Chow. Pertandingan sepakbola yang tidak masuk akal membuat perut kita mules karena aksi lucunya. Shaolin Soccer menceritakan tentang pembuatan sebuah klub sepak bola baru yang para pemainnya adalah ahli kungfu. Jangan lewatkan film yang penuh aksi konyol dan kocak ini.</span></p>
 
           <h4>Pendekar Ulat Sutera</h4>
-          <p><div class="col-lg-6" style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;"><p>seorang pendekar yang tidak mengetahui siapa orang tuanya, diajarin ilmu tingkat tinggi dari perguruan paling top dunia persilatan yaitu Wudang (butong), ilmu itu dinamakan ilmu Ulat Sutera.</p></div></p>
+          <p><div class="col-lg-6" style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;"><p>seorang pendekar yang tidak mengetahui siapa orang tuanya, diajarin ilmu tingkat tinggi dari perguruan paling top dunia persilatan yaitu Wudang (butong), ilmu itu dinamakan ilmu Ulat Sutera. Saat memasuki Level terakhir dari ilmu ulat sutera, tubuh praktisi nya akan dipenuhi oleh benang sutera, jadi seperti mirip kepompong. Dan setelah itu, dia akan seperti terlahir kembali </p></div></p>
         </div>
 
         <div class="col-lg-6">
           <h4>Wong Fei-hung</h4>
-          <p><p style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Film ini sudah sangat sering disajikan kedalam berbagai versi. Yang paling terkenal adalah yang dibintangi aktor laga Jet Li dengan judul Once upon a time in China.</p></p>
+          <p><p style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Film ini sudah sangat sering disajikan kedalam berbagai versi. Yang paling terkenal adalah yang dibintangi aktor laga Jet Li dengan judul Once upon a time in China. Wong Fei-hung terkenal akan ilmu kakinya yang disebut dengan Tendangan Tanpa Bayangan, yang menendang bagian perut musuh secara bertubi-tubi tanpa henti dengan rentang waktu yang panjang tanpa menginjak tanah. Wong Fei-hunga juga seorang ahli medis atau tabib.</p></p>
 
           <h4>the Return of the Condor Heroes</h4>
-          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Bercerita tentang seorang pendekar bernama Yoko (yang guo) dalam menentang aturan dunia persilatan dan membina hubungan asmara dengan guru ilmu silatnya. Petualangan Yoko dalam perjuangan menemukan jati diri di dunia persilatan membentu karakter ksatrianya yang sejati.</span></p>
+          <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Bercerita tentang seorang pendekar bernama Yoko (yang guo) dalam menentang aturan dunia persilatan dan membina hubungan asmara dengan guru ilmu silatnya. Petualangan Yoko dalam perjuangan menemukan jati diri di dunia persilatan membentu karakter ksatrianya yang sejati. Yoko suatu saat harus mengalami kenangan pahit dimana satu lengannya ditebas oleh putri dari paman Kwee Ceng, hal itu membuatnya kehilangan banyak darah dan pingsan cukup lama. Tapi hal itu juga yang membuat takdirnya berubah, bertemu dengan kakak rajawali dan mempelajari ilmu yang sangat kuat.</span></p>
 
           <h4>The Book and the Sword</h4>
           <p><span style="color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-size: medium;">Kisah aksi seorang pendekar cendekiawan bernama Chen Jialuo dalam memimpin kelompok bunga merah untuk perjuangan melawan pemerintahan dinasti Qing yang menguasai china daratan tengah. Kisah heroiknya dan asmaranya dengan perempuan suku Uygur menjadi tema utama cerita.</span></p>
         </div>
       </div>
-<br>
+<br>---
 Masih ada beberapa lagi yang cukup bagus ceritanya, seperti Kungfu Hustle yang kocak dan lagi lagi dibintangi oleh aktor kawakan Stephen Chow, kemudian juga adaptasi drama lawas berjudul The Great Conspiracy yang mengambil cerita dari berbagai novel, tapi secara garis besar mengambil cerita novel meteor, butterfly, sword milik karya Gu Long (khu lung). Kemudian juga ada serial Dragon Gate Inn, movie Crouching Tiger Hidden Dragon.
-Untuk penggemar adaptasi serial silat sejak lama, mungkin akan agak kesulitan menonton yang versi adaptasi wuxia baru, pasti 90% dari fans cersil lama akan komplain, mulai dari komplain CGI effect yang terlalu banyak, kostum warna warni yang berlapis-lapis, make up para artis yang terlalu tebal, cara bertarung yang kurang profesional, efek bertarung yang kurang, dan kebanyakan cerita cinta yang lebay.
+<br>Untuk penggemar adaptasi serial silat sejak lama, mungkin akan agak kesulitan menonton yang versi adaptasi wuxia baru, pasti 90% dari fans cersil lama akan komplain, mulai dari komplain CGI effect yang terlalu banyak, kostum warna warni yang berlapis-lapis, make up para artis yang terlalu tebal, cara bertarung yang kurang profesional, efek bertarung yang kurang, dan kebanyakan cerita cinta yang lebay.
 Tetapi untuk para penggemar baru (alias anak muda) yang baru menggeluti dunia cerita silat, maka justru kebalikan, jika mereka disuruh nonton yang adaptasi film serial silat jadul seperti tahun 80an gitu, maka mereka akan komplain seperti: koq gambarnya jelek ya, resolusi rendah, cewe nya (pendekar wanita) kurang cakep, koq bertarungnya cuma efek ledak-ledak, trus lompat jungkir balik doank kayak akrobat sirkus, dan lain-lain.
-Tapi apapun itu, tidak dapat dipungkiri bahwa cerita silat mulai menuruh trendingnya. Sekarang ini, belakangan sudah mulai pudar dan digantikan oleh cerita romantis ala ABG dan bergenre fantasy yang disebut Xianxia. Ini adalah sub-genre yang lebih populer belakangan ini. 
+<br>Tapi apapun itu, tidak dapat dipungkiri bahwa cerita silat mulai menuruh trendingnya. Sekarang ini, belakangan sudah mulai pudar dan digantikan oleh cerita romantis ala ABG dan bergenre fantasy yang disebut Xianxia. Ini adalah sub-genre yang lebih populer belakangan ini. 
 <br>
       <footer class="footer">
         <p>© Wuxia Indonesia 2021</p>
