--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ Beberapa Drama Wuxia terbaik serta film silat mandarin terbaik adalah:
         </div>
       </div>
 <br>---<br>
-Masih ada beberapa lagi yang cukup bagus ceritanya; seperti Kungfu Hustle yang kocak dan lagi lagi dibintangi oleh aktor kawakan Stephen Chow, kemudian juga adaptasi drama lawas berjudul The Great Conspiracy yang mengambil cerita dari berbagai novel, tapi secara garis besar mengambil cerita novel meteor, butterfly, sword milik karya Gu Long (khu lung). Kemudian juga ada serial Dragon Gate Inn, movie Crouching Tiger Hidden Dragon.
+Masih ada beberapa lagi yang cukup bagus ceritanya; seperti Kungfu Hustle yang kocak dan lagi lagi dibintangi oleh aktor kawakan Stephen Chow, kemudian juga adaptasi drama lawas berjudul The Great Conspiracy yang mengambil cerita dari berbagai novel, tapi secara garis besar mengambil cerita novel meteor, butterfly, sword milik karya Gu Long (khu lung). Kemudian juga ada serial Dragon Gate Inn, dan movie Crouching Tiger Hidden Dragon.
 <br>Untuk penggemar adaptasi serial silat sejak lama, mungkin akan agak kesulitan menonton yang versi adaptasi wuxia baru, pasti 90% dari fans cersil lama akan komplain, mulai dari komplain CGI effect yang terlalu banyak, kostum warna warni yang berlapis-lapis, make up para artis yang terlalu tebal, cara bertarung yang kurang profesional, efek bertarung yang kurang, dan kebanyakan cerita cinta yang lebay.
 Tetapi untuk para penggemar baru (alias anak muda) yang baru menggeluti dunia cerita silat, maka justru kebalikan, jika mereka disuruh nonton yang adaptasi film serial silat jadul seperti tahun 80an gitu, maka mereka akan komplain seperti: koq gambarnya jelek ya, resolusi rendah, cewe nya (pendekar wanita) kurang cakep, koq bertarungnya cuma efek ledak-ledak, trus lompat jungkir balik doank kayak akrobat sirkus, dan lain-lain.
-<br>Tapi apapun itu, tidak dapat dipungkiri bahwa cerita silat mulai menuruh trendingnya. Sekarang ini, belakangan sudah mulai pudar dan digantikan oleh cerita romantis ala ABG dan bergenre fantasy yang disebut Xianxia. Ini adalah sub-genre yang lebih populer belakangan ini. 
+<br>Tapi apapun itu, tidak dapat dipungkiri bahwa cerita silat mulai menurun trendingnya. Sekarang ini, belakangan sudah mulai pudar dan digantikan oleh cerita romantis ala ABG dan bergenre fantasy yang disebut Xianxia. Ini adalah sub-genre yang lebih populer belakangan ini. 
 <br>
       <footer class="footer">
         <p>© Wuxia Indonesia 2021</p>
