--- a/about-wuxia.html
+++ b/about-wuxia.html
@@ -1,14 +1,27 @@
-Wuxia (武俠 [ù.ɕjǎ]), yang secara harfiah berarti "pahlawan bela diri", adalah genre fiksi Cina mengenai petualangan seniman bela diri di Cina kuno. 
+Wuxia atau dalam bahasa Indonesia disebut cerita silat (武俠), yang secara harfiah berarti "pahlawan seni bela diri", adalah sebuah genre fiksi Tiongkok mengenai petualangan seniman bela diri di Cina kuno. 
 Meskipun wuxia secara tradisional merupakan bentuk sastra fantasi, popularitasnya telah menyebabkannya disesuaikan untuk bentuk seni yang beragam seperti 
 opera Cina, mànhuà, film, serial televisi, dan video game. Ini merupakan bagian dari budaya populer di banyak komunitas berbahasa Cina di seluruh dunia. 
 Kata "wǔxiá" adalah senyawa yang terdiri dari unsur-unsur wǔ (武, secara harfiah "bela diri", "militer", atau "bersenjata") dan xiá (俠, secara harfiah "ksatria", 
 "main hakim sendiri" atau "pahlawan"). Seorang seniman bela diri yang mengikuti kode xia sering disebut sebagai xiákè (俠客, secara harfiah "pengikut xia") atau 
 yóuxiá (遊俠, secara harfiah "mengembara xia"). Dalam beberapa terjemahan, seniman bela diri disebut sebagai "pendekar pedang" atau "swordswoman" meskipun 
 mereka mungkin tidak selalu menggunakan pedang.
+
+Cerita Wuxia berakar pada beberapa cerita youxia awal (游侠, "pengembara") dan cike (刺客, "pembunuh") sekitar abad ke-2 hingga ke-3 SM, seperti upaya pembunuhan 
+Jing Ke dan Zhuan Zhu (专诸) yang tercantum dalam Catatan Sejarawan Agung Sima Qian. Dalam bagian berjudul "Assassins" (刺客列传), Sima Qian menguraikan sejumlah 
+pembunuh terkenal di Negara-negara Berperang yang dipercayakan dengan tugas (kemudian dianggap mulia) pembunuhan politik. Ini biasanya ci ke (刺客) yang tinggal 
+di kediaman tuan feodal dan bangsawan, memberikan layanan dan loyalitas banyak dalam cara samurai Jepang. Di bagian lain, "Roaming Xia" (游侠列传), ia merinci 
+banyak fitur embrio dari budaya xia pada zamannya. Fenomena populer ini terus didokumentasikan dalam sejarah sejarah seperti Kitab Han (汉书) dan The Later Book of the Han (后汉书).
+
+Cerita Xiake membuat comeback yang kuat dalam dinasti Tang dalam bentuk cerita Chuanqi (传奇, secara harfiah "legendaris"). Cerita seperti Nie Yin Niang (聂隐娘), 
+The Slave of Kunlun (昆仑奴), Jing Shi San Niang (荆 Dan The Bearded Warrior (虬髯客) berfungsi sebagai prototipe untuk cerita wuxia modern, menampilkan fantastis, 
+protagonis di luar dunia, seringkali penyendiri, yang melakukan perbuatan heroik yang berani.
+
+Novel full-length paling awal yang dapat dianggap sebagai bagian dari genre ini adalah Water Margin, yang ditulis dalam Dinasti Ming, meskipun beberapa akan mengklasifikasikan bagian dari The Romance of the Three Kingdoms sebagai kemungkinan anteseden sebelumnya. Yang pertama adalah kritik politik terhadap keadaan sosio-ekonomi yang menyedihkan dari akhir Dinasti Ming, sementara yang terakhir adalah menceritakan kembali sejarah alternatif dari negara tiga kerajaan pasca-Dinasti Han. Juara Water Margin dari penjahat dengan kode kehormatan sangat berpengaruh dalam pengembangan budaya Jianghu. Tiga Kerajaan berisi banyak deskripsi pertempuran jarak dekat klasik yang kemudian dipinjam oleh penulis wuxia.
 Para pahlawan dalam fiksi wuxia biasanya tidak melayani seorang tuan, menggunakan kekuatan militer, atau termasuk dalam kelas aristokrat. Mereka sering berasal 
 dari kelas sosial yang lebih rendah dari masyarakat Cina kuno. Kode ksatria biasanya mengharuskan pahlawan wuxia untuk memperbaiki dan memperbaiki kesalahan, 
 berjuang untuk kebenaran, menghapus penindas, dan membawa pembalasan atas kesalahan masa lalu. Tradisi xia Cina dapat dibandingkan dengan kode bela diri dari 
 budaya lain, seperti bushido samurai Jepang.
+
 Genre wuxia modern menjadi terkenal pada awal abad ke-20 setelah Gerakan Keempat Mei 1919. Sebuah literatur baru berkembang, menyerukan istirahat dengan nilai-nilai 
 Konfusianisme, dan xia muncul sebagai simbol kebebasan pribadi, pembangkangan terhadap tradisi Konfusianisme, dan penolakan terhadap sistem keluarga Cina.
 Pada dinasti Qing (1644-1911 M), perkembangan lebih lanjut adalah gong'an (公案; secara harfiah "kasus publik") dan novel detektif terkait, di mana xia dan pahlawan lainnya, bekerja sama dengan hakim atau hakim, memecahkan kejahatan dan memerangi ketidakadilan. Kisah-kisah Justice Bao dari Sanxia Wuyi (三俠五義; kemudian diperluas dan berganti nama menjadi Qixia Wuyi) dan Xiaowuyi (小五義), menggabungkan banyak tema keadilan sosial dari cerita wuxia kemudian. Kisah Xiayi tentang romansa ksatria, yang sering menampilkan pahlawan wanita dan kemampuan bertarung supranatural, juga muncul selama dinasti Qing. Novel seperti Shi Gong'an Qiwen (施公案奇聞) dan Ernü Yingxiong Zhuan (兒女英雄傳) telah dikutip sebagai novel wuxia yang paling jelas. 
