--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
           <ul class="nav nav-pills float-right">
             <li class="nav-item">
-              <a class="nav-link active" href="https://atumiwa.github.io">Visit Homepage<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="https://atumiwa.github.io">Visit Homepage<span class="sr-only"></span></a> (current)
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about-wuxia.html">About Wuxia</a>
