--- a/contact.html
+++ b/contact.html
@@ -10,23 +10,39 @@
 
 <HR>
 
-<a href="http://somegreatsite.com">Link Name</a>
+<a href="https://atumiwa.github.io">Visit Homepage</a>
 
-is a link to another nifty site
+< Kembali ke halaman utama
 
 <H1>Cara Menghubungi Saya</H1>
 
 <H2>Melalui Jejaring Sosial</H2>
 
+  Instagram : Wuxia Indonesia
+  Facebook : Jianghuindo
+  Linkedin : Bruri Tumiwa
+  Youtube : Anthony Tumiwa
+  Whatsapp : 0811642146
+  SMS : sama dengan nomor Whatsapp
+  Discord : atumiwa
+  Telegram : 0811-
+  Twitter: Wuxia Tumiwa
+  Pinterest : Wuxia Indonesia
+  Artstation : Wuxia-Indonesia
+  Ko-fi:
+  Tik-tok:
+  Yahoo Messenger: a_tumiwa@yahoo.com
+  Blog address: jianghuindo.blogspot.com
+  
 Send me mail at <a href="tumiwa@gmail.com">
 
 tumiwa@gmail.com</a>.
 
-<P> This is a new paragraph!
+<P> Selain jejaring sosial, ataupun email, bisa juga menghubungi saya lewat nomor telepon ataupun melalui form (formulir) yang tertera dibawah ini.
 
-<P> <B>This is a new paragraph!</B>
+<P> <B>Juga bisa melalui kolom komentar dibawah ini</B>
 
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<BR> <B><I>Saya juga hardir di berbagai forum, group, dan komunitas online, seperti forum Kaskus, detik, reddit, dan lainnya, bisa Private message atau Direct Message saya disana.</I></B>
 
 <HR>
 
