--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <H1>Cara Menghubungi Saya</H1>
 
 <H2>Melalui Jejaring Sosial</H2>
-
+<pre>
   Instagram : Wuxia Indonesia
   Facebook : Jianghuindo
   Linkedin : Bruri Tumiwa
@@ -37,12 +37,12 @@
 Send me mail at <a href="tumiwa@gmail.com">
 
 tumiwa@gmail.com</a>.
-
+</pre>
 <P> Selain jejaring sosial, ataupun email, bisa juga menghubungi saya lewat nomor telepon ataupun melalui form (formulir) yang tertera dibawah ini.
 
 <P> <B>Juga bisa melalui kolom komentar dibawah ini</B>
-
-<BR> <B><I>Saya juga hardir di berbagai forum, group, dan komunitas online, seperti forum Kaskus, detik, reddit, dan lainnya, bisa Private message atau Direct Message saya disana.</I></B>
+<br>
+<BR> <B><I>Saya juga hardir di berbagai forum, group, dan komunitas online, seperti forum Kaskus, detik, reddit, dan lainnya, <br>bisa Private message atau Direct Message saya disana.</I></B>
 
 <HR>
 
