--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
 <H2>Melalui Jejaring Sosial</H2>
 <pre>
-  Instagram : Wuxia Indonesia
+  Instagram : Cerita Silat
   Facebook : Jianghuindo
   Linkedin : Bruri Tumiwa
   Youtube : Anthony Tumiwa
@@ -34,7 +34,7 @@
   Yahoo Messenger: a_tumiwa@yahoo.com
   Blog address: jianghuindo.blogspot.com
   
-Send me mail at <a href="tumiwa@gmail.com">
+You Can also Send me e-mail at <a href="mailto:tumiwa@gmail.com">
 
 tumiwa@gmail.com</a>.
 </pre>
