--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
-# atumiwa.github.io
-Halaman tentang Wuxia Drama
+<div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="/index.html">Visit Homepage<span class="sr-only"></span></a> (current)
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about-wuxia.html">About Wuxia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Proyek Wuxia</h3>
+      </div>
+
+
+Selamat Datang di: atumiwa.github.io
+
+Situs Halaman tentang Wuxia Drama
 
 Wuxia (武侠) secara langsung diterjemahkan menjadi Pahlawan Bela Diri, yang bertentangan dengan Pahlawan Abadi Xianxia. (Pengantar Drama Xianxia) Ini adalah genre fiktif dalam budaya Cina yang terutama mengeksplorasi petualangan seniman bela diri di Cina kuno.
 
