--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/contact.html">Contact Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/review-drama-wuxia.html">Review</a>
+            </li>
           </ul>
         </nav>
         <h3 class="text-muted">Proyek Wuxia</h3>
@@ -50,4 +53,7 @@ Drama Wuxia bukanlah serial drama tanpa cerita seni bela diri! (Seni bela diri j
       Seni bela diri mencakup berbagai gaya dan teknik bertarung, dan jika sebuah drama mencakup beberapa sekte, sekte-sekte ini kemungkinan besar memiliki 
       set teknik bertarung mereka sendiri. Seni bela diri berfokus pada praktik eksternal dan internal. Kungfu eksternal mencakup kekuatan fisik dan kelincahan, 
       sementara Kungfu internal mempraktikkan kultivasi pikiran dan tubuh, juga dikenal sebagai energi internal seseorang.
-<p>
+
+      <p>
+            Situs ini lebih ke review drama wuxia cerita silat yang versi tampilan sederhana atau simple, jadi tidak ada gambar, script, video, animasi, atau 
+            efek apapun yang bikin loading halaman lama. Jadi benar-benar polos putih seperti jaman 80an dahulu, disaat film wuxia masih populer.
