--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             </li>
           </ul>
         </nav>
-        <h3 class="text-muted">Proyek Wuxia</h3>
+        <h2 class="text-muted">Proyek Wuxia Indonesia</h2>
       </div>
 
 <p>
-Selamat Datang di: atumiwa.github.io
+Selamat Datang di: <i>atumiwa.github.io</i>
 <p>
       <b>Situs Halaman tentang Wuxia Drama</b>
 
