--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <H1>Cara Menghubungi Saya</H1>
 
 <H2>Melalui Jejaring Sosial</H2>
-<pre>
+<pre><font size="16">
   Instagram : Cerita Silat
   Facebook : Jianghuindo
   Linkedin : Bruri Tumiwa
@@ -37,7 +37,7 @@
 You Can also Send me e-mail at <a href="mailto:tumiwa@gmail.com">
 
 tumiwa@gmail.com</a>.
-</pre>
+</font></pre>
 <P> Selain jejaring sosial, ataupun email, bisa juga menghubungi saya lewat nomor telepon ataupun melalui form (formulir) yang tertera dibawah ini.
 
 <P> <B>Juga bisa melalui kolom komentar dibawah ini</B>
