--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <H1>Cara Menghubungi Saya</H1>
 
 <H2>Melalui Jejaring Sosial</H2>
-<pre><font size="16">
+<pre><font size="15">
   Instagram : Cerita Silat
   Facebook : Jianghuindo
   Linkedin : Bruri Tumiwa
@@ -34,9 +34,10 @@
   Yahoo Messenger: a_tumiwa@yahoo.com
   Blog address: jianghuindo.blogspot.com
   
-You Can also Send me e-mail at <a href="mailto:tumiwa@gmail.com">
+You Can also Send me e-mail at:<a href="mailto:tumiwa@gmail.com">
 
 tumiwa@gmail.com</a>.
+
 </font></pre>
 <P> Selain jejaring sosial, ataupun email, bisa juga menghubungi saya lewat nomor telepon ataupun melalui form (formulir) yang tertera dibawah ini.
 
