--- a/beda-umur.html
+++ b/beda-umur.html
@@ -1,4 +1,5 @@
-<pre><font size="14">
+<pre>
+<p style="font-size:15;">
 Saat ada topik tentang beda umur Yang Guo (yoko) dan Xiao Long Nu (bibi lung), selalu muncul berbagai jawaban, ada yang bilang 4 tahun, 6 tahun, 7-8 tahun, 10 tahun.
 Jadi perbedaan jawaban itu dipengaruhi oleh revisi novel soal umur ini.
 
@@ -26,5 +27,5 @@ di Edisi lama ada ketidakkonsistenan terhadap umur Yang Guo dan Xiao long nu ini
 cuma saya harus cari dulu catatan kopekan saya, uda lupa dibagian mana.
 
 tapi karena biasa yang diikuti itu revisi terakhir, jadinya ya 4 tahun.
-</font>
+</p>
 </pre>
