--- a/beda-umur.html
+++ b/beda-umur.html
@@ -1,6 +1,7 @@
 <pre>
 <p style="font-size:15;">
-Saat ada topik tentang beda umur Yang Guo (yoko) dan Xiao Long Nu (bibi lung), selalu muncul berbagai jawaban, ada yang bilang 4 tahun, 6 tahun, 7-8 tahun, 10 tahun.
+Saat ada topik tentang beda umur Yang Guo (yoko) dan Xiao Long Nu (bibi lung), selalu muncul berbagai jawaban, 
+ada yang bilang 4 tahun, 6 tahun, 7-8 tahun, 10 tahun.
 Jadi perbedaan jawaban itu dipengaruhi oleh revisi novel soal umur ini.
 
 kemunculan pertama Yang Guo saat kecil itu
@@ -9,11 +10,12 @@ di edisi 1: 14-15
 edisi 2: 13-14
 edisi 3: 12-13
 
-saat pertemuan pertama dengan xln ga dibilang umur berapa, cuma nanti dibilang 2 tahun sudah berlalu dan kini berusia 16 tahun . xln 20 tahun.
+si Yang Guo saat pertemuan pertama dengan Xiao long nu ga dibilang umur berapa, cuma nanti dibilang 2 tahun sudah berlalu dan kini dia berusia 16 tahun . (XLN 20 tahun).
 
 jadi revisinya untuk pertimbangan waktu lama latihan di sekte Quanzhen dan selama perjalanan.
 
-umur Yang Guo saat ibunya meninggal pun ada revisi, di edisi 3 jika tidak salah umur 11 tahun, di edisi lama itu lebih muda, sekitar umur 5-7 tahun kayaknya.
+umur Yang Guo saat ibunya meninggal pun ada revisi, di edisi 3 jika tidak salah umur 11 tahun, di edisi lama itu lebih muda, 
+sekitar umur 5-7 tahun kayaknya.
 
 Perayaan ulang tahun Xiao long nu juga ada revisi.
 
@@ -27,5 +29,8 @@ di Edisi lama ada ketidakkonsistenan terhadap umur Yang Guo dan Xiao long nu ini
 cuma saya harus cari dulu catatan kopekan saya, uda lupa dibagian mana.
 
 tapi karena biasa yang diikuti itu revisi terakhir, jadinya ya 4 tahun.
+
+Untuk detailnya dan pastinya tentang perbedaan revisi, akan saya cari dulu catatan lama saya, lupa taruh dimana, semoga ketemu.
+Jika tidak ketemu, terpaksa harus buat atau research ulang dan cuma jadi versi singkat, tapi setidaknya lebih dari halaman ini.
 </p>
 </pre>
