--- a/beda-umur.html
+++ b/beda-umur.html
@@ -6,9 +6,9 @@ Jadi perbedaan jawaban itu dipengaruhi oleh revisi novel soal umur ini.
 
 kemunculan pertama Yang Guo saat kecil itu
 
-di edisi 1: 14-15
-edisi 2: 13-14
-edisi 3: 12-13
+di edisi 1: 14-15 tahun
+di edisi 2: 13-14 tahun
+di edisi 3: 12-13 tahun
 
 si Yang Guo saat pertemuan pertama dengan Xiao long nu ga dibilang umur berapa, cuma nanti dibilang 2 tahun sudah berlalu dan kini dia berusia 16 tahun . (XLN 20 tahun).
 
@@ -32,5 +32,6 @@ tapi karena biasa yang diikuti itu revisi terakhir, jadinya ya 4 tahun.
 
 Untuk detailnya dan pastinya tentang perbedaan revisi, akan saya cari dulu catatan lama saya, lupa taruh dimana, semoga ketemu.
 Jika tidak ketemu, terpaksa harus buat atau research ulang dan cuma jadi versi singkat, tapi setidaknya lebih dari halaman ini.
+setidaknya jawaban kurang rapi sementara ini bisa memuaskan para wuxia lover atau pecinta cerita silat trilogy condor heroes.
 </p>
 </pre>
