--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <H1>Cara Menghubungi Saya</H1>
 
 <H2>Melalui Jejaring Sosial</H2>
-<pre><font size="medium">
+<pre><font size="7">
   Instagram : Cerita Silat
   Facebook : Jianghuindo
   Linkedin : Bruri Tumiwa
