--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,27 @@
 
 <HR>
 
-<a href="https://atumiwa.github.io">Visit Homepage</a>
-
-< Kembali ke halaman utama
-
+<div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="/index.html">Visit Homepage<span class="sr-only"></span></a> (current)
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about-wuxia.html">About Wuxia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/review-drama-wuxia.html">Review</a>
+            </li>
+          </ul>
+        </nav>
+        <h2 class="text-muted">Proyek Wuxia Indonesia</h2>
+      </div>
+  
 <H1>Cara Menghubungi Saya</H1>
 
 <H2>Melalui Jejaring Sosial</H2>
@@ -25,12 +42,12 @@
   Whatsapp : 0811642146
   SMS : sama dengan nomor Whatsapp
   Discord : atumiwa
-  Telegram : 0811-
+  Telegram : ketik dan search channel Wuxia Indonesia
   Twitter: Wuxia Tumiwa
   Pinterest : Wuxia Indonesia
   Artstation : Wuxia-Indonesia
-  Ko-fi:
-  Tik-tok:
+  Ko-fi: D1D05WS9L
+  Tik-tok: not available
   Yahoo Messenger: a_tumiwa@yahoo.com
   Blog address: jianghuindo.blogspot.com
   
@@ -46,7 +63,8 @@ tumiwa@gmail.com</a>.
 <BR> <B><I>Saya juga hardir di berbagai forum, group, dan komunitas online, seperti forum Kaskus, detik, reddit, dan lainnya, <br>bisa Private message atau Direct Message saya disana.</I></B>
 
 <HR>
-
+nb: tidak menerima endorsement produk apapun, tidak menerima iklan dalam bentuk apapun, jadi jangan menghubungi saya untuk hal begituan.
+  Terimakasih. dan salam.
 </BODY>
 
 </HTML>
