--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@ tumiwa@gmail.com</a>.
 <BR> <B><I>Saya juga hardir di berbagai forum, group, dan komunitas online, seperti forum Kaskus, detik, reddit, dan lainnya, <br>bisa Private message atau Direct Message saya disana.</I></B>
 
 <HR>
-nb: tidak menerima endorsement produk apapun, tidak menerima iklan dalam bentuk apapun, jadi jangan menghubungi saya untuk hal begituan.
+nb: tidak menerima endorsement produk apapun, tidak menerima iklan dalam bentuk apapun, <br>jadi jangan menghubungi saya untuk hal begituan.<br>
   Terimakasih. dan salam.
 </BODY>
 
